--- a/style.css
+++ b/style.css
@@ -77,4 +77,9 @@
         width: 100%;
         height: 100%;
     }
+
+    .source {
+        color: darkgray;
+        font-weight: bold;
+    }
 }
