--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+
 .search-container {
     position: absolute;
     left: 12px;
@@ -5,6 +10,10 @@
     display: flex;
     align-items: center;
     gap: 8px;
+
+    #nav-btn {
+        display: none;
+    }
 
     #search-btn {
         cursor: pointer;
@@ -70,6 +79,29 @@
     }
 }
 
+#side-menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    flex-direction: column;
+    height: 100%;
+    padding: 48px;
+    color: azure;
+    font-weight: 100;
+
+    .btn-close {
+        position: absolute;
+        top: 12px;
+        right: 12px;
+    }
+
+    a {
+        text-decoration: none;
+        padding: 5px 0;
+    }
+}
+
 .news {
     border-bottom: 2px solid black;
 
@@ -81,5 +113,45 @@
     .source {
         color: darkgray;
         font-weight: bold;
+        margin-right: 8px;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        margin-top: 45px;
+    }
+
+    .search-container {
+        top: 6px;
+        left: 10px;
+        width: 95%;
+        display: flex;
+        align-items: center;
+
+        #nav-btn {
+            display: inline-block;
+        }
+
+        #nav-btn:hover,
+        #search-btn:hover {
+            cursor: pointer;
+        }
+
+        #search-btn {
+            transition: none;
+        }
+
+        #search-btn:hover {
+            transform: none;
+        }
+
+        #search-field.active {
+            width: 100%;
+        }
+    }
+
+    #menu-list {
+        display: none;
     }
 }
